[tool.poetry]
name = "telstats"
version = "0.1.0"
description = ""
authors = ["duckrojo <3063609+duckrojo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
lxml = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
